--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "server": "json-server --port 3001 --delay 300  --watch db.json"
+    "server": "json-server --port 3000   --watch db.json"
   },
   "eslintConfig": {
     "extends": [
